--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3",
     "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
