--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
-    "sentiment": "^5.0.2"
+    "sentiment": "^5.0.2",
+    "socket.io": "^4.8.1"
   }
 }
