--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.8.3",
     "chart.js": "^4.4.8",
     "firebase": "^11.4.0",
+    "framer-motion": "^12.6.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
