--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "chart.js": "^4.4.8",
     "firebase": "^11.4.0",
     "framer-motion": "^12.6.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
