--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-leaflet-markercluster": "^5.0.0-rc.0",
     "react-router-dom": "^7.2.0",
     "react-to-print": "^3.0.5",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.13",
     "uuid": "^11.1.0"
