--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,9 @@
     "react-redux": "^9.2.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^7.1.3",
+    "react-to-print": "^3.1.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.0"
